上传微信后台服务程序

--- a/doc/说明.md
+++ b/doc/说明.md
@@ -7,9 +7,9 @@
 
 #### 框架结构
 - 本工程名为"weixin-server"，采用maven工具进行管理，由六个模块组成分别如下：
-1、weixin-controller模块： 控制层，前端接口调用均写在该模块，它依赖其它五个模块；
-2、weixin-service模块： 逻辑处理层，专门处理后台逻辑，它依赖除了控制层外的四个模块；
-3、weixin-dao模块： 数据库连接层，处理与数据库的连接，它依赖weixin-common和weixin-bean模块；
-4、weixin-common模块： 公共模块，它依赖weixin-bean模块；
-5、weixin-bean模块： 实体类模块，目前不依赖其它模块；
-6、weixin-service_call模块： 服务调用模块，用来处理服务的调用，它依赖weixin-common和weixin-bean模块。
+##### 1、weixin-controller模块： 控制层，前端接口调用均写在该模块，它依赖其它五个模块；
+##### 2、weixin-service模块： 逻辑处理层，专门处理后台逻辑，它依赖除了控制层外的四个模块；
+##### 3、weixin-dao模块： 数据库连接层，处理与数据库的连接，它依赖weixin-common和weixin-bean模块；
+##### 4、weixin-common模块： 公共模块，它依赖weixin-bean模块；
+##### 5、weixin-bean模块： 实体类模块，目前不依赖其它模块；
+##### 6、weixin-service_call模块： 服务调用模块，用来处理服务的调用，它依赖weixin-common和weixin-bean模块。
